--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "apexcharts": "^3.37.0",
+    "framer-motion": "^10.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-beautiful-dnd": "^13.1.1",
